fixed fill for visibility/locked icon on selected layers

--- a/src/style/shared/icons.less
+++ b/src/style/shared/icons.less
@@ -138,7 +138,7 @@
     .button-toggle,
     &:hover .button-toggle{
         svg {
-            fill: @label-secondary-color;
+            fill: @label-active-color;
             stroke: none;        
             display: block;
         }
